able to get an object back from database, there are some other erros

--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
 <body>
 
     <div id="artist-song-name"></div>
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Input Genre</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Input Genre Here">
+        </div>
 
-    <button> Submit</button>
+        <button> Submit</button>
 
-    <div id="youtube-screen"></div>
+        <div id="youtube-screen"></div>
 
 
 </body>
+<!--jQuery link-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--js link for YouTube API-->
+<script src="https://apis.google.com/js/api.js"></script>
+<!--link to external js sheet-->
 <script src="assets/javascript/api.js"></script>
+
 
 </html>
