Added various methods provided by Greg Smith

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           </button>
           <div class="dropdown-menu">
             <h6 class="dropdown-header">Choose</h6>
+            <button onclick="myLogin()">Login</button><br />
             <a class="dropdown-item" href="#!">rap</a>
             <a class="dropdown-item" href="#!">r&b</a>
             <a class="dropdown-item" href="#!">edm</a>
@@ -103,5 +104,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="assets/javascript/api.js"></script>
 </body>
 </html>
