added log in button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <hr>
   <h2>Choose a Genre</h2>
       <div class="dropdown open">
+          <button type="button" class="btn btn-info mr-3">Log In</button>
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Genres
           </button>
