YouTube data call now working

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <hr>
     <div class="w3-container w3-center w3-row youtube w3-margin-top w3-padding-large yel">
       <h1 class="mb-4"><i class='fas fa-video'></i> Youtube Videos</h1>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/-1h8HQ6rd5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe  id="video-display" width="560" height="315" src="https://www.youtube.com/embed/-1h8HQ6rd5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> <!-- youtube div-->
 
 </div> <!-- main container-->
@@ -103,5 +103,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="assets/javascript/api.js"></script>
 </body>
 </html>
