Began preliminary AJAX calls

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1 class="mt-5">Top Ten Songs By Genre</h1>
   <hr>
   <h2>Choose a Genre</h2>
-  <button onclick="myLogin()">Login</button><br />
+  <button class="login" onclick="myLogin()">Login</button><br />
       <div class="dropdown open">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Genres
