Made choices only work for one answer

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				
 			// displaying the question
 			$("#ques").html("<h2> " + ques + " </h2> <br>");
-			$("#one").html("<input type='radio' value='True'> True</input> <br />");
-			$("#two").html("<input type='radio' value='False'> False</input> <br />");
+			$("#one").html("<input type='radio' name = 'chooseone' value='True'> True</input> <br />");
+			$("#two").html("<input type='radio' name = 'chooseone' value='False'> False</input> <br />");
 				
 			$("#nuButQ").html("<button>submit</button>");
 			
